// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`runtime export snapshot . export 목록 1`] = `
[
  "ACTION_EQUIPMENT_PANEL_DEFAULT_CLASSES",
  "ACTION_EQUIPMENT_PANEL_DEFAULT_FACE_LABELS",
  "ACTION_EQUIPMENT_PANEL_DEFAULT_FACE_SEQUENCE",
  "ACTION_EQUIPMENT_PANEL_DEFAULT_FEATURES",
  "ACTION_EQUIPMENT_PANEL_DEFAULT_LABELS",
  "ACTION_EQUIPMENT_PANEL_DEFAULT_SLOT_COUNT",
  "AFTER_MOTION_FRAME_ORDER",
  "ANIMATION_PANEL_DEFAULT_CLASSES",
  "ANIMATION_PANEL_DEFAULT_LABELS",
  "ANIMATION_PANEL_DEFAULT_TABS",
  "ANIMATOR_ANY_STATE",
  "ANIMATOR_DEFAULT_TRANSITION_DURATION",
  "ActionEquipmentPanel",
  "ActiveObjects",
  "Airplane",
  "AnimationBridge",
  "AnimationController",
  "AnimationDebugPanel",
  "AnimationPanel",
  "AnimationPlayer",
  "AnimationSystem",
  "AnimatorRuntime",
  "AssetPreviewCanvas",
  "AudioControls",
  "AutomationSystem",
  "BODY_REGIONS",
  "BUILDING_BASIC_OBJECT_OPTIONS",
  "BUILDING_FLAG_STYLE_OPTIONS",
  "BUILDING_PLACED_OBJECT_OPTIONS",
  "BUILDING_TILE_GROUP_DRAG_TYPE",
  "BUILDING_TILE_OBJECT_OPTIONS",
  "BUILDING_TILE_PRESETS",
  "BUILDING_TILE_PRESET_DRAG_TYPE",
  "BUILDING_TILE_SHAPE_OPTIONS",
  "BUILDING_TREE_COLOR_PRESETS",
  "BUILDING_TREE_OPTIONS",
  "BUILDING_WALL_KIND_OPTIONS",
  "BUILDING_WALL_PRESETS",
  "BUILDING_WEATHER_EFFECT_OPTIONS",
  "BUILDING_WORLD_SURFACE_OPTIONS",
  "BUILTIN_SCRIPT_IDS",
  "BaseCameraSystem",
  "BaseController",
  "Billboard",
  "BlockSystem",
  "BugSpot",
  "BuildingBridge",
  "BuildingController",
  "BuildingGpuCullingDriver",
  "BuildingGpuMirrorDriver",
  "BuildingGpuUploadDriver",
  "BuildingIndirectArgsUploadDriver",
  "BuildingIndirectDrawDriver",
  "BuildingNavigationObstacleDriver",
  "BuildingPanel",
  "BuildingRenderStateDriver",
  "BuildingSystem",
  "BuildingUI",
  "BuildingVisibilityDriver",
  "BuoyancyComponent",
  "CAMERA_CONTROLLER_DEFAULT_CLASSES",
  "CAMERA_CONTROLLER_DEFAULT_LABELS",
  "CAMERA_CONTROLLER_DEFAULT_MODES",
  "CAMERA_CONTROLLER_MODE_OPTIONS",
  "CAMERA_DEBUG_PANEL_DEFAULT_CLASSES",
  "CAMERA_DEBUG_PANEL_DEFAULT_FIELDS",
  "CAMERA_DEBUG_PANEL_DEFAULT_INTERVAL",
  "CAMERA_DEBUG_PANEL_DEFAULT_LABELS",
  "CAMERA_DEBUG_PANEL_DEFAULT_PRECISION",
  "CAMERA_PANEL_DEFAULT_CLASSES",
  "CAMERA_PANEL_DEFAULT_LABELS",
  "CAMERA_PANEL_DEFAULT_TABS",
  "CAMERA_PRESETS_DEFAULT_CLASSES",
  "CAMERA_PRESETS_DEFAULT_LABELS",
  "CAMERA_PRESETS_DEFAULT_PRESETS",
  "CAMERA_PRESETS_DEFAULT_SMOOTHING",
  "CAMERA_SETTINGS_DEFAULT_CLASSES",
  "CAMERA_SETTINGS_DEFAULT_LABELS",
  "CAMERA_SETTINGS_DEFAULT_SECTIONS",
  "CATALOG_CATEGORIES",
  "CHARACTER_ANIMATOR_FRAME_PRIORITY",
  "CHARACTER_ANIMATOR_PARAMETERS",
  "CHARACTER_LOCOMOTION",
  "CHARACTER_MENU_DEFAULT_FEATURES",
  "CHARACTER_MENU_DEFAULT_SECTIONS",
  "CHARACTER_MENU_DEFAULT_SLOTS",
  "CHARACTER_SKIN_NODE_NAMES",
  "CONTENT_SCHEMA_VERSION",
  "Camera",
  "CameraController",
  "CameraDebugPanel",
  "CameraDebugger",
  "CameraPanel",
  "CameraPresets",
  "CameraSettingsTab",
  "CameraSystem",
  "CatalogUI",
  "Character",
  "CharacterCreator",
  "CharacterMenu",
  "ChaseController",
  "CinematicPanel",
  "CircularPluginDependencyError",
  "Clicker",
  "ColorGrade",
  "CommandPalette",
  "ConnectionForm",
  "ConnectionPool",
  "ControllerWrapper",
  "CraftingUI",
  "CropPlot",
  "DAILY_FRIENDSHIP_CAP",
  "DEFAULT_APPEARANCE",
  "DEFAULT_ASSET_IMPORT_LIMITS",
  "DEFAULT_BUILDING_GRID_EXTENSION_ID",
  "DEFAULT_BUILDING_OBJECT_CATALOG",
  "DEFAULT_BUILDING_PLACEMENT_EXTENSION_ID",
  "DEFAULT_BUILDING_SAVE_EXTENSION_ID",
  "DEFAULT_BUILDING_STORE_SERVICE_ID",
  "DEFAULT_CAMERA_SAVE_EXTENSION_ID",
  "DEFAULT_CAMERA_STORE_SERVICE_ID",
  "DEFAULT_CAMERA_SYSTEM_EXTENSION_ID",
  "DEFAULT_CHARACTER_ANIMATOR_ID",
  "DEFAULT_CHARACTER_ATTACHMENT_SOCKETS",
  "DEFAULT_CHARACTER_EQUIPMENT_PRESETS",
  "DEFAULT_CHARACTER_ID",
  "DEFAULT_EDITOR_SHORTCUTS",
  "DEFAULT_HOTBAR_SIZE",
  "DEFAULT_INPUT_ACTIONS",
  "DEFAULT_INTERACTION_INPUT_EXTENSION_ID",
  "DEFAULT_INVENTORY_SIZE",
  "DEFAULT_MOTIONS_INPUT_EXTENSION_ID",
  "DEFAULT_MOTIONS_PHYSICS_EXTENSION_ID",
  "DEFAULT_MOTIONS_RUNTIME_SERVICE_ID",
  "DEFAULT_PREFAB_METADATA",
  "DEFAULT_PROJECT_SETTINGS",
  "DEFAULT_RUNTIME_SAVE_DIAGNOSTICS_SERVICE_ID",
  "DEFAULT_SCENE_ID",
  "DEFAULT_SCENE_LAYERS",
  "DEFAULT_SCENE_LAYER_TAG_REGISTRY",
  "DEFAULT_SCENE_TAGS",
  "DEFAULT_SCENE_TRANSFORM",
  "DEFAULT_SERVER_COMMAND_AUTHORITY_SERVICE_ID",
  "DEFAULT_SQUARE_GRID_SPEC",
  "DEFAULT_VISIT_DOMAINS",
  "DEFAULT_WORLD_SAVE_ENVIRONMENT",
  "DRAW_CLUSTER_BILLBOARD",
  "DRAW_CLUSTER_BLOCK",
  "DRAW_CLUSTER_COUNT",
  "DRAW_CLUSTER_DESCRIPTORS",
  "DRAW_CLUSTER_FIRE",
  "DRAW_CLUSTER_FLAG",
  "DRAW_CLUSTER_GRASS",
  "DRAW_CLUSTER_MODEL",
  "DRAW_CLUSTER_SAKURA",
  "DRAW_CLUSTER_SAND",
  "DRAW_CLUSTER_SNOWFIELD",
  "DRAW_CLUSTER_TILE",
  "DRAW_CLUSTER_WALL",
  "DRAW_CLUSTER_WATER",
  "DialogBox",
  "DialogRunner",
  "DirectionComponent",
  "DuplicateExtensionError",
  "DuplicatePluginError",
  "DuplicateSaveDomainBindingError",
  "DynamicFog",
  "DynamicSky",
  "EDITOR_PANEL_COMPONENT_KIND",
  "EMPTY_EDITOR_SELECTION",
  "EMPTY_OUTFITS",
  "Editor",
  "EditorLayout",
  "Elr",
  "EntityController",
  "EntityStateManager",
  "EventsHUD",
  "FACE_STYLE_LABEL",
  "FLAG_STYLE_META",
  "FRAME_PHASES",
  "FRAME_PRE_PHYSICS_PRIORITY",
  "FRAME_SCHEDULER_PRIORITY",
  "FRIENDSHIP_LEVELS",
  "Fire",
  "FirstPersonController",
  "FishSpot",
  "FixedController",
  "FocusableObject",
  "Footprints",
  "Footsteps",
  "FrameScheduler",
  "FrameSchedulerHost",
  "FreePlacementAdapter",
  "GAESUP_SKELETON_ID",
  "GAMEPLAY_EVENT_ACTION_TYPES",
  "GAMEPLAY_EVENT_CONDITION_TYPES",
  "GAMEPLAY_EVENT_TRIGGER_TYPES",
  "GPU_META_STRIDE",
  "GPU_SPATIAL_STRIDE",
  "GaeSupProps",
  "GaesupController",
  "GaesupErrorBoundary",
  "GaesupRuntimeProvider",
  "GaesupWorld",
  "GaesupWorldContent",
  "GamePad",
  "Gamepad",
  "GameplayEventEngine",
  "GameplayEventPanel",
  "GameplayEventRegistry",
  "Grass",
  "GrassDriver",
  "GravityComponent",
  "GridHelper",
  "GroundClicker",
  "HAIR_STYLE_LABEL",
  "HierarchyPanel",
  "HotbarUI",
  "HouseDoor",
  "HousePlot",
  "HttpAssetSource",
  "HttpContentBundleSource",
  "INDIRECT_DRAW_STRIDE",
  "ImpulseComponent",
  "InMemoryEventBus",
  "InMemoryExtensionRegistry",
  "IndexedDBAdapter",
  "InnerGroupRef",
  "InputActionMap",
  "InputRecorder",
  "InputReplay",
  "InspectorPanel",
  "Interactable",
  "InteractionBridge",
  "InteractionPrompt",
  "InteractionSystem",
  "InteractionTracker",
  "InventoryUI",
  "IsometricController",
  "LOCALE_LABEL",
  "LegacyGrid",
  "LocalStorageAdapter",
  "LutOverlay",
  "MENU_PRESETS",
  "MOTIONS_TELEPORT_EVENT",
  "MOTION_PANEL_DEFAULT_CLASSES",
  "MOTION_PANEL_DEFAULT_LABELS",
  "MOTION_PANEL_DEFAULT_TABS",
  "MailboxUI",
  "ManagedMotionEntity",
  "MathUtils",
  "MemoizationManager",
  "MessageQueue",
  "MiniMap",
  "MinimapObject",
  "MinimapPlatform",
  "MinimapSystem",
  "MissingExtensionError",
  "MissingPlacementEntryError",
  "MissingPluginDependencyError",
  "MockNetworkAdapter",
  "ModelRenderer",
  "MotionAnimationController",
  "MotionBridge",
  "MotionController",
  "MotionDebugPanel",
  "MotionPanel",
  "MotionService",
  "MotionSystem",
  "MotionUI",
  "MultiplayerCanvas",
  "NPCEventEditor",
  "NPCInstance",
  "NPCNetworkManager",
  "NPCNetworkVisualizer",
  "NPCPreview",
  "NPCSystem",
  "NavigationSystem",
  "NetworkBridge",
  "NetworkDebugPanel",
  "NetworkSystem",
  "OUTFIT_SLOT_LABEL",
  "OutfitAvatar",
  "Outlined",
  "PHYSICS_STEP_PRIORITY",
  "PLAYER_PROGRESS_DOMAINS",
  "PREFAB_DOCUMENT_VERSION",
  "PROJECT_ASSETS_PANEL_DEFAULT_CLASSES",
  "PROJECT_ASSETS_PANEL_DEFAULT_KIND_OPTIONS",
  "PROJECT_ASSETS_PANEL_DEFAULT_LABELS",
  "PROJECT_ASSETS_PANEL_DEFAULT_TABS",
  "PROJECT_FILE_VERSION",
  "PROJECT_SETTINGS_VERSION",
  "PartsGroupRef",
  "PassiveAirplane",
  "PassiveCharacter",
  "PassiveObjects",
  "PassiveVehicle",
  "PerformancePanel",
  "PhysicsBridge",
  "PhysicsEntity",
  "PhysicsSystem",
  "PlacementEngine",
  "PlacementRejectedError",
  "PlayerInfoOverlay",
  "PlayerNetworkManager",
  "PlayerPositionTracker",
  "PluginManifestValidationError",
  "PluginRegistry",
  "PluginValidationAssertionError",
  "PluginVersionMismatchError",
  "ProjectAssetsPanel",
  "Qt",
  "QuestLogUI",
  "ROLE_PERMISSIONS",
  "RUNTIME_SAVE_BINDING_REJECTED_EVENT",
  "RUNTIME_SAVE_DIAGNOSTIC_EVENT",
  "RemotePlayer",
  "ResizablePanel",
  "Rideable",
  "RideableUI",
  "RoomPortal",
  "RoomRoot",
  "RoomVisibilityDriver",
  "RuntimeSaveDiagnosticsToaster",
  "SCENE_COMPONENT_TYPES",
  "SCENE_DOCUMENT_SAVE_KEY",
  "SCENE_DOCUMENT_VERSION",
  "SCENE_OBJECT_BODY_ID_KEY",
  "SEED_ASSETS",
  "SEED_CROPS",
  "SEED_EVENTS",
  "SEED_GAMEPLAY_EVENTS",
  "SEED_ITEMS",
  "Sakura",
  "SakuraBatch",
  "Sand",
  "SandBatch",
  "SaveLoadManager",
  "SaveSystem",
  "SceneDocumentManager",
  "SceneFader",
  "SceneObjectBody",
  "SceneObjectTransformGizmo",
  "SceneRoot",
  "ScriptRuntime",
  "ScriptRuntimeHost",
  "ShopUI",
  "SideScrollController",
  "Snow",
  "Snowfield",
  "SnowfieldBatch",
  "SpeechBalloon",
  "SquareGridAdapter",
  "StudioPanel",
  "TIME_CONSTANTS",
  "Teleport",
  "TeleportDropEffect",
  "TeleportMarker",
  "TeleportOnClick",
  "ThirdPersonController",
  "ThreeAnimatorBinding",
  "ThreeObjectPool",
  "TileSystem",
  "TimeHUD",
  "ToastHost",
  "ToolUseController",
  "ToonOutlines",
  "TopDownController",
  "TouchControls",
  "TownHUD",
  "TreeObject",
  "UIBridge",
  "UISystem",
  "V3",
  "V30",
  "V31",
  "ValidationUtils",
  "Vehicle",
  "VehiclePanel",
  "WORLD_SNAPSHOT_DOMAINS",
  "WallSystem",
  "WalletHUD",
  "Water",
  "WeatherEffect",
  "WeatherHUD",
  "WindComponent",
  "World",
  "WorldBridge",
  "WorldConfigProvider",
  "WorldContainer",
  "WorldProps",
  "WorldSystem",
  "addPrefabInstance",
  "applyAgentBehaviorBlueprint",
  "applyBuildingNavigationObstacles",
  "applyCharacterEquipmentPreset",
  "applyInstanceToPrefab",
  "applyNPCBehaviorBlueprint",
  "applyPrefabOverrides",
  "applySceneComponentUpdate",
  "applySceneDocumentBatch",
  "applySceneDocumentCommand",
  "applySceneTransform",
  "applyToonToScene",
  "applyVisitSnapshot",
  "assertValidGaesupPlugin",
  "assetToMeshConfig",
  "audioPlugin",
  "autoDetectProfile",
  "blockToPlacementEntry",
  "buildAssetDependencyGraph",
  "buildBuildingGpuMirror",
  "buildBuildingIndirectDrawMirror",
  "buildingCellToWorld",
  "buildingGridAdapter",
  "buildingGroupsToPlacementEntries",
  "buildingPlacementAdapter",
  "buildingPlugin",
  "cache",
  "calcAngleByVector",
  "calcNorm",
  "cameraPlugin",
  "canMember",
  "canSceneLayersCollide",
  "captureVisitRestorePoint",
  "catalogPlugin",
  "cellToTilePosition",
  "characterPlugin",
  "classifyTier",
  "clearEditorSelection",
  "clearTrigCache",
  "cloneCameraSystemConfig",
  "clonePrefabDocument",
  "cloneProjectSettings",
  "cloneSceneDocument",
  "collectAssetReferences",
  "collectPrefabSubtreeIds",
  "collectSaveDomains",
  "collectibleScript",
  "compareSkeletons",
  "compileNPCBrainBlueprint",
  "composeSceneTransforms",
  "computeGameTime",
  "computePrefabOverrides",
  "configureReinforcementAdapter",
  "convertElr",
  "convertN3",
  "convertV3",
  "craftingPlugin",
  "createAgentBehaviorBlueprintFromNPCBehaviorBlueprint",
  "createAnimationController",
  "createAnimationSlice",
  "createAnimatorComponent",
  "createAudioPlugin",
  "createBlockFootprint",
  "createBrowserInputDevices",
  "createBuildingGpuUploadPlan",
  "createBuildingIndirectDrawUploadPlan",
  "createBuildingPieceComponent",
  "createBuildingPlacementEngine",
  "createBuildingPlugin",
  "createBuildingScopeId",
  "createCameraCloseUpPreset",
  "createCameraOptionSlice",
  "createCameraPlugin",
  "createCameraSaveDataFromDomain",
  "createCatalogPlugin",
  "createCharacterPlugin",
  "createClientGameplayEventServices",
  "createColliderComponent",
  "createCommandAcceptedResult",
  "createCommandAuthorityRouter",
  "createCommandRejectedResult",
  "createContentBundleFromSaveSystem",
  "createCozyLifeSamplePlugin",
  "createCraftingPlugin",
  "createCustomMeshId",
  "createDefaultCharacterAnimator",
  "createDefaultGameplayEventRegistry",
  "createDefaultInputActions",
  "createDefaultInteractionInputBackend",
  "createDefaultSaveSystem",
  "createEconomyPlugin",
  "createEditorCommandStack",
  "createEditorPlayModeController",
  "createEditorSaveStatus",
  "createEditorSelectionState",
  "createEditorShell",
  "createEditorShortcutRegistry",
  "createEditorSlice",
  "createEditorTransaction",
  "createEmptyBuildingGpuUploadResources",
  "createEmptyBuildingIndirectDrawMirror",
  "createEmptyGpuMirror",
  "createEventsPlugin",
  "createFarmingPlugin",
  "createFrameDriver",
  "createGaesupRuntime",
  "createGameCommand",
  "createGameplayEventActionTemplate",
  "createGameplayEventConditionTemplate",
  "createGameplayEventTriggerTemplate",
  "createHighGraphicsSamplePlugin",
  "createI18nPlugin",
  "createInitialCameraMetrics",
  "createInputDeviceState",
  "createInteractableComponent",
  "createInteractionInputAdapter",
  "createInteractionSlice",
  "createInteractionSystemInputBackend",
  "createInventoryPlugin",
  "createLocalVisitChannel",
  "createLutTexture",
  "createMailPlugin",
  "createManualToastEventBlueprint",
  "createMemoryInputBackend",
  "createMeshRendererComponent",
  "createMotionsPlugin",
  "createMotionsRuntime",
  "createNPCBehaviorBlueprintFromAgentBehaviorBlueprint",
  "createNPCBehaviorBlueprintFromInstance",
  "createNPCObservation",
  "createNPCPlugin",
  "createNetworkEnvelope",
  "createNoOverlapRule",
  "createNpcComponent",
  "createNpcTalkStartsQuestEventBlueprint",
  "createPersistenceSlice",
  "createPersistenceSliceWithOptions",
  "createPlacementEngine",
  "createPlayerProgress",
  "createPlayerProgressFromSaveSystem",
  "createPluginContext",
  "createPluginLogger",
  "createPluginRegistry",
  "createPrefabDocument",
  "createPrefabFromSceneObjects",
  "createPrefabInstance",
  "createPrefabVariant",
  "createProjectFile",
  "createProjectSettings",
  "createQuestsPlugin",
  "createRelationsPlugin",
  "createRenderer",
  "createRigidBodyComponent",
  "createRuntimeSaveDiagnostics",
  "createSaveDataFromSaveSystem",
  "createSceneCollisionGroups",
  "createSceneComponent",
  "createSceneDocument",
  "createSceneDocumentController",
  "createSceneDocumentSaveBinding",
  "createSceneLayerDefinition",
  "createSceneLayerTagRegistry",
  "createSceneMigrationRegistry",
  "createSceneObject",
  "createSceneObjectEditorCommands",
  "createScenePlugin",
  "createSceneTagDefinition",
  "createScopedAssetMeshConfig",
  "createScopedBuildingMeshId",
  "createScriptComponent",
  "createServerEvent",
  "createServerPluginHost",
  "createShooterKitSamplePlugin",
  "createSnapshotAck",
  "createStateDelta",
  "createStoreDomainPlugin",
  "createTeleportDestination",
  "createTerrainBlockMaterial",
  "createTileFootprint",
  "createTimePlugin",
  "createToonMaterial",
  "createTownPlugin",
  "createVectorCache",
  "createWeatherPlugin",
  "createWebSocketVisitChannel",
  "createWorldDataFromSaveDomains",
  "createWorldSlice",
  "createWorldSnapshot",
  "createWorldSnapshotFromSaveSystem",
  "dayOfTotalMinutes",
  "defaultCharacterAnimator",
  "defaultMultiplayerConfig",
  "defineGaesupPlugin",
  "defineScript",
  "destroyBuildingGpuUploadResources",
  "detectCapabilities",
  "dialogTriggerScript",
  "disposeToonGradients",
  "doorScript",
  "economyPlugin",
  "edgeKey",
  "edgeSideToWallRotation",
  "edgeToWallTransform",
  "editorSlice",
  "eventsPlugin",
  "farmingPlugin",
  "filterPluginsForRuntime",
  "findMissingAssetReferences",
  "findPrefabInstanceLink",
  "findSceneObject",
  "findSceneObjects",
  "findSceneObjectsByLayer",
  "findSceneObjectsByTag",
  "findSceneObjectsWithComponent",
  "findTeleportDestination",
  "findTerrainBlockMaterial",
  "formatEditorShortcut",
  "formatRuntimeSaveDiagnostic",
  "formatRuntimeSaveDiagnosticToastMessage",
  "frameScheduler",
  "gamepadDefault",
  "getActiveSceneObject",
  "getAnimatorController",
  "getAudioEngine",
  "getBindPoseHash",
  "getBlockSupportHeight",
  "getBuildingSupportHeight",
  "getCachedTrig",
  "getCropRegistry",
  "getDefaultBuildingObject",
  "getDefaultInteractionInputBackend",
  "getDefaultToonMode",
  "getDialogRegistry",
  "getDrawClusterForSnapshotEntry",
  "getEditorSaveStatusLabel",
  "getEventRegistry",
  "getGameplayEventRegistry",
  "getGlobalAnimationBridge",
  "getGlobalStateManager",
  "getGrassManager",
  "getIndirectInstanceCount",
  "getItemRegistry",
  "getNPCBrainBlueprint",
  "getNPCScheduler",
  "getNextAutosaveAt",
  "getPooledVector",
  "getPrefabInstanceObjects",
  "getPrefabRootObjectIds",
  "getQuestRegistry",
  "getRecipeRegistry",
  "getReinforcementAdapterConfig",
  "getSaveSystem",
  "getSceneChildren",
  "getSceneLayersByPurpose",
  "getSceneObjectComponent",
  "getSceneObjectComponents",
  "getScript",
  "getSharedFrameEntryCount",
  "getSkeletonBoneNames",
  "getTileSupportHeight",
  "getToolEvents",
  "getToonGradient",
  "getTrigCacheStats",
  "getWallMaterialKey",
  "getWebGPUDeviceFromRenderer",
  "hasSceneObjectComponent",
  "hasTileCollision",
  "hasWallCollision",
  "hydrateAudioState",
  "hydrateCatalogState",
  "hydrateCharacterState",
  "hydrateCraftingState",
  "hydrateEventsState",
  "hydrateFarmingState",
  "hydrateI18nState",
  "hydrateInventoryState",
  "hydrateMailState",
  "hydrateNPCState",
  "hydrateQuestsState",
  "hydrateRelationsState",
  "hydrateSceneState",
  "hydrateShopState",
  "hydrateTimeState",
  "hydrateTownState",
  "hydrateWalletState",
  "hydrateWeatherState",
  "i18nPlugin",
  "indexAabb",
  "inputActionsFromProjectSettings",
  "inspectModel",
  "installClientGameplayEventServices",
  "instantiatePrefabObjects",
  "inventoryPlugin",
  "isAutoSaveSuspended",
  "isCanonicalSceneJsonObject",
  "isEditableShortcutTarget",
  "isEditorPanelComponentExtension",
  "isEventActive",
  "isNewDay",
  "isNewHour",
  "isSceneLayerSelectable",
  "isSceneLayerVisible",
  "isSceneObjectSelected",
  "isValidOrOne",
  "isValidOrZero",
  "isVectorNonZero",
  "isWebGPUAvailable",
  "listAnimatorControllers",
  "listScripts",
  "loadContentBundleFromManifest",
  "loadCoreWasm",
  "loadCubeLut",
  "loadCubeLutTexture",
  "loadSceneRuntime",
  "logger",
  "mailPlugin",
  "markEditorDirty",
  "markEditorSaveError",
  "markEditorSaved",
  "markEditorSaving",
  "matchesEditorShortcut",
  "matchesSceneObjectQuery",
  "migrateSceneDocument",
  "motionsPlugin",
  "normalizeAngle",
  "normalizeQuarterTurnRotation",
  "normalizeSaveMetadata",
  "notify",
  "npcPlugin",
  "object3DToSceneTransform",
  "pair",
  "parseBuildingGpuVisibilityFlags",
  "parseCubeLut",
  "parsePrefabDocument",
  "parseProjectFile",
  "parseProjectSettings",
  "parseSceneDocument",
  "parseWorldSaveId",
  "parseWorldSaveTimestamp",
  "pickDomains",
  "placementOk",
  "placementRejected",
  "playCameraCinematic",
  "profileForTier",
  "propagatePrefabChanges",
  "propagatePrefabToDocument",
  "queryAabbIds",
  "questsPlugin",
  "readPrefabInstanceLink",
  "realMsToGameMinutes",
  "registerAnimatorController",
  "registerBuiltinScripts",
  "registerDefaultReinforcementAdapter",
  "registerNPCBrainAdapter",
  "registerNPCBrainBlueprint",
  "registerSceneComponentSchema",
  "registerScript",
  "registerSeedCrops",
  "registerSeedEvents",
  "registerSeedItems",
  "relationsPlugin",
  "releaseVector",
  "remapSkinnedGeometryJoints",
  "replaceWithPrefabInstance",
  "requestCameraCloseUp",
  "requestMotionsTeleport",
  "resolveCharacterAttachment",
  "resolveCharacterBaseNodeExclusions",
  "resolveCharacterParts",
  "resolveDefaultInteractionSystem",
  "resolveEditorPanelComponentExtensions",
  "resolveEquippedCharacterAttachments",
  "resolveNPCBrainDecision",
  "resolveRolePermissions",
  "resolveRuntimeInputBackend",
  "resolveSchedule",
  "resolveScriptProps",
  "resolveSharedSkeletonBinding",
  "restoreCameraCloseUp",
  "revertPrefabInstance",
  "revertPrefabInstanceOverride",
  "revertPrefabOverride",
  "rideableDefault",
  "rotatorScript",
  "scenePlugin",
  "scriptProp",
  "selectAssetsByKind",
  "selectAssetsBySlot",
  "selectSceneObject",
  "selectSceneObjectRange",
  "serializeAudioState",
  "serializeCatalogState",
  "serializeCharacterState",
  "serializeCraftingState",
  "serializeEventsState",
  "serializeFarmingState",
  "serializeI18nState",
  "serializeInventoryState",
  "serializeMailState",
  "serializeNPCState",
  "serializePrefabDocument",
  "serializeProjectSettings",
  "serializeQuestsState",
  "serializeRelationsState",
  "serializeSceneDocument",
  "serializeSceneState",
  "serializeShopState",
  "serializeTimeState",
  "serializeTownState",
  "serializeVisit",
  "serializeWalletState",
  "serializeWeatherState",
  "setDefaultGameplayEventServices",
  "setDefaultInteractionSystemResolver",
  "setDefaultToonMode",
  "setSceneObjectHover",
  "shouldRunEditorAutosave",
  "shouldSetupPluginForRuntime",
  "shouldUpdate",
  "shouldUpdateVector3",
  "snapBuildingPosition",
  "snapSceneTransform",
  "suspendAutoSave",
  "syncBuildingGpuBuffers",
  "syncBuildingIndirectArgsBuffer",
  "t",
  "teleportDestinationToVector3",
  "threeObjectPool",
  "tileFootprintKeys",
  "tileGroupToPlacementEntries",
  "tileHalfSize",
  "tileOverlaps",
  "tilePositionToCell",
  "tileToPlacementEntry",
  "timePlugin",
  "toggleCharacterWeapon",
  "townPlugin",
  "triggerZoneScript",
  "unfocusCamera",
  "unindexId",
  "unregisterNPCBrainBlueprint",
  "updateInputState",
  "useAmbientBgm",
  "useAnimationBridge",
  "useAnimationPlayer",
  "useAnimatorEvent",
  "useAssetStore",
  "useAudioStore",
  "useAutoSave",
  "useBlueprintEntity",
  "useBuildingEditor",
  "useBuildingGpuCullingStore",
  "useBuildingRenderStateStore",
  "useBuildingStore",
  "useBuildingVisibilityStore",
  "useCamera",
  "useCameraBridge",
  "useCanvasFrameScheduler",
  "useCatalogStore",
  "useCatalogTracker",
  "useCharacterAnimator",
  "useCharacterMenuController",
  "useCharacterStore",
  "useClicker",
  "useCraftingStore",
  "useCurrentInteraction",
  "useCursorState",
  "useDayChange",
  "useDecorationScore",
  "useDialogStore",
  "useEditor",
  "useEditorAutosave",
  "useEditorShortcuts",
  "useEditorStore",
  "useEngineFrame",
  "useEquippedItem",
  "useEquippedToolKind",
  "useEventsStore",
  "useEventsTicker",
  "useFrameDriverItem",
  "useFriendshipStore",
  "useGaesupContext",
  "useGaesupController",
  "useGaesupGltf",
  "useGaesupRuntime",
  "useGaesupRuntimeRevision",
  "useGaesupStore",
  "useGameClock",
  "useGameTime",
  "useGenericRefs",
  "useGltfAndSize",
  "useHotbar",
  "useHotbarKeyboard",
  "useHourChange",
  "useI18nStore",
  "useInputActions",
  "useInputBackend",
  "useInteractablesStore",
  "useInteractionKey",
  "useInteractionSystem",
  "useInventory",
  "useInventoryStore",
  "useKeyboard",
  "useLoadOnMount",
  "useLocale",
  "useMailStore",
  "useMinimap",
  "useMotion",
  "useMultiplayer",
  "useNPCConnection",
  "useNPCStore",
  "useNetworkBridge",
  "useNetworkConfigStore",
  "useNetworkConnection",
  "useNetworkGroup",
  "useNetworkGroups",
  "useNetworkMessage",
  "useNetworkNodes",
  "useNetworkStateStore",
  "useNetworkStats",
  "useNpcSchedule",
  "usePerfStore",
  "usePhysics",
  "usePhysicsBridge",
  "usePlayerNetwork",
  "usePlayerPosition",
  "usePlayerWorldPosition",
  "usePlotStore",
  "useQuestObjectiveTracker",
  "useQuestStore",
  "useRecentMessages",
  "useRideable",
  "useRoomVisibilityStore",
  "useSceneStore",
  "useScriptObjectTransform",
  "useScriptRuntime",
  "useSharedFrame",
  "useShopStore",
  "useSpeechBalloonPosition",
  "useStateSystem",
  "useTeleport",
  "useTimeOfDay",
  "useTimeStore",
  "useToastStore",
  "useToolUse",
  "useTownStore",
  "useTranslate",
  "useUIConfigStore",
  "useVisitRoom",
  "useWalletStore",
  "useWeatherStore",
  "useWeatherTicker",
  "validateAnimatorController",
  "validateContentBundle",
  "validateContentBundleManifest",
  "validateGaesupPlugin",
  "validateModelStats",
  "validatePrefabDocument",
  "validateProjectCollisionLayers",
  "validateProjectFile",
  "validateProjectSettings",
  "validateSceneComponentData",
  "validateSceneDocument",
  "validateSceneLayerTagRegistry",
  "validateSceneObjectLayersAndTags",
  "validateSerializedPrefabDocument",
  "validateSerializedSceneDocument",
  "visitProviderFromSaveSystem",
  "wallGroupToPlacementEntries",
  "wallToPlacementEntry",
  "wallTransformToEdge",
  "weatherPlugin",
  "worldToBuildingCell",
  "zigZag",
]
`;

exports[`runtime export snapshot ./admin export 목록 1`] = `
[
  "GaesupAdmin",
  "useAuthStore",
  "useToast",
]
`;

exports[`runtime export snapshot ./assets export 목록 1`] = `
[
  "AssetPreviewCanvas",
  "DEFAULT_ASSET_IMPORT_LIMITS",
  "HttpAssetSource",
  "SEED_ASSETS",
  "assetToMeshConfig",
  "buildAssetDependencyGraph",
  "collectAssetReferences",
  "createScopedAssetMeshConfig",
  "createScopedBuildingMeshId",
  "findMissingAssetReferences",
  "inspectModel",
  "selectAssetsByKind",
  "selectAssetsBySlot",
  "useAssetStore",
  "validateModelStats",
]
`;

exports[`runtime export snapshot ./blueprints export 목록 1`] = `
[
  "BASIC_KART_BLUEPRINT",
  "BaseComponent",
  "BlueprintConverter",
  "BlueprintEntity",
  "BlueprintFactory",
  "BlueprintLoader",
  "BlueprintSpawner",
  "ComponentRegistry",
  "FIRE_MAGE_BLUEPRINT",
  "GravityForceComponent",
  "WARRIOR_BLUEPRINT",
  "blueprintRegistry",
  "registerDefaultComponents",
  "useAirplaneBlueprint",
  "useBlueprint",
  "useBlueprintsByType",
  "useCharacterBlueprint",
  "useSpawnFromBlueprint",
  "useVehicleBlueprint",
]
`;

exports[`runtime export snapshot ./blueprints/editor export 목록 1`] = `
[
  "BlueprintEditor",
  "BlueprintPanel",
  "BlueprintPreview",
]
`;

exports[`runtime export snapshot ./building export 목록 1`] = `
[
  "BUILDING_BASIC_OBJECT_OPTIONS",
  "BUILDING_FLAG_STYLE_OPTIONS",
  "BUILDING_PLACED_OBJECT_OPTIONS",
  "BUILDING_TILE_GROUP_DRAG_TYPE",
  "BUILDING_TILE_OBJECT_OPTIONS",
  "BUILDING_TILE_PRESETS",
  "BUILDING_TILE_PRESET_DRAG_TYPE",
  "BUILDING_TILE_SHAPE_OPTIONS",
  "BUILDING_TREE_COLOR_PRESETS",
  "BUILDING_TREE_OPTIONS",
  "BUILDING_WALL_KIND_OPTIONS",
  "BUILDING_WALL_PRESETS",
  "BUILDING_WEATHER_EFFECT_OPTIONS",
  "BUILDING_WORLD_SURFACE_OPTIONS",
  "Billboard",
  "BlockSystem",
  "BuildingBridge",
  "BuildingController",
  "BuildingGpuCullingDriver",
  "BuildingGpuMirrorDriver",
  "BuildingGpuUploadDriver",
  "BuildingIndirectArgsUploadDriver",
  "BuildingIndirectDrawDriver",
  "BuildingNavigationObstacleDriver",
  "BuildingRenderStateDriver",
  "BuildingSystem",
  "BuildingUI",
  "BuildingVisibilityDriver",
  "DEFAULT_BUILDING_GRID_EXTENSION_ID",
  "DEFAULT_BUILDING_OBJECT_CATALOG",
  "DEFAULT_BUILDING_PLACEMENT_EXTENSION_ID",
  "DEFAULT_BUILDING_SAVE_EXTENSION_ID",
  "DEFAULT_BUILDING_STORE_SERVICE_ID",
  "DRAW_CLUSTER_BILLBOARD",
  "DRAW_CLUSTER_BLOCK",
  "DRAW_CLUSTER_COUNT",
  "DRAW_CLUSTER_DESCRIPTORS",
  "DRAW_CLUSTER_FIRE",
  "DRAW_CLUSTER_FLAG",
  "DRAW_CLUSTER_GRASS",
  "DRAW_CLUSTER_MODEL",
  "DRAW_CLUSTER_SAKURA",
  "DRAW_CLUSTER_SAND",
  "DRAW_CLUSTER_SNOWFIELD",
  "DRAW_CLUSTER_TILE",
  "DRAW_CLUSTER_WALL",
  "DRAW_CLUSTER_WATER",
  "FLAG_STYLE_META",
  "Fire",
  "GPU_META_STRIDE",
  "GPU_SPATIAL_STRIDE",
  "Grass",
  "GrassDriver",
  "GridHelper",
  "INDIRECT_DRAW_STRIDE",
  "Sakura",
  "SakuraBatch",
  "Sand",
  "SandBatch",
  "Snow",
  "Snowfield",
  "SnowfieldBatch",
  "TileSystem",
  "WallSystem",
  "Water",
  "applyBuildingNavigationObstacles",
  "blockToPlacementEntry",
  "buildBuildingGpuMirror",
  "buildBuildingIndirectDrawMirror",
  "buildingCellToWorld",
  "buildingGridAdapter",
  "buildingGroupsToPlacementEntries",
  "buildingPlacementAdapter",
  "buildingPlugin",
  "cellToTilePosition",
  "createBlockFootprint",
  "createBuildingGpuUploadPlan",
  "createBuildingIndirectDrawUploadPlan",
  "createBuildingPlacementEngine",
  "createBuildingPlugin",
  "createBuildingScopeId",
  "createCustomMeshId",
  "createEmptyBuildingGpuUploadResources",
  "createEmptyBuildingIndirectDrawMirror",
  "createEmptyGpuMirror",
  "createTerrainBlockMaterial",
  "createTileFootprint",
  "destroyBuildingGpuUploadResources",
  "edgeKey",
  "edgeSideToWallRotation",
  "edgeToWallTransform",
  "findTerrainBlockMaterial",
  "getBlockSupportHeight",
  "getBuildingSupportHeight",
  "getDefaultBuildingObject",
  "getDrawClusterForSnapshotEntry",
  "getGrassManager",
  "getIndirectInstanceCount",
  "getTileSupportHeight",
  "getWallMaterialKey",
  "getWebGPUDeviceFromRenderer",
  "hasTileCollision",
  "hasWallCollision",
  "indexAabb",
  "normalizeQuarterTurnRotation",
  "pair",
  "parseBuildingGpuVisibilityFlags",
  "queryAabbIds",
  "snapBuildingPosition",
  "syncBuildingGpuBuffers",
  "syncBuildingIndirectArgsBuffer",
  "tileFootprintKeys",
  "tileGroupToPlacementEntries",
  "tileHalfSize",
  "tileOverlaps",
  "tilePositionToCell",
  "tileToPlacementEntry",
  "unindexId",
  "useBuildingEditor",
  "useBuildingGpuCullingStore",
  "useBuildingRenderStateStore",
  "useBuildingStore",
  "useBuildingVisibilityStore",
  "wallGroupToPlacementEntries",
  "wallToPlacementEntry",
  "wallTransformToEdge",
  "worldToBuildingCell",
  "zigZag",
]
`;

exports[`runtime export snapshot ./editor export 목록 1`] = `
[
  "ANIMATION_PANEL_DEFAULT_CLASSES",
  "ANIMATION_PANEL_DEFAULT_LABELS",
  "ANIMATION_PANEL_DEFAULT_TABS",
  "AnimationPanel",
  "BUILDING_BASIC_OBJECT_OPTIONS",
  "BUILDING_FLAG_STYLE_OPTIONS",
  "BUILDING_PLACED_OBJECT_OPTIONS",
  "BUILDING_TILE_GROUP_DRAG_TYPE",
  "BUILDING_TILE_OBJECT_OPTIONS",
  "BUILDING_TILE_PRESETS",
  "BUILDING_TILE_PRESET_DRAG_TYPE",
  "BUILDING_TILE_SHAPE_OPTIONS",
  "BUILDING_TREE_COLOR_PRESETS",
  "BUILDING_TREE_OPTIONS",
  "BUILDING_WALL_KIND_OPTIONS",
  "BUILDING_WALL_PRESETS",
  "BUILDING_WEATHER_EFFECT_OPTIONS",
  "BUILDING_WORLD_SURFACE_OPTIONS",
  "Billboard",
  "BlockSystem",
  "BuildingBridge",
  "BuildingController",
  "BuildingGpuCullingDriver",
  "BuildingGpuMirrorDriver",
  "BuildingGpuUploadDriver",
  "BuildingIndirectArgsUploadDriver",
  "BuildingIndirectDrawDriver",
  "BuildingNavigationObstacleDriver",
  "BuildingPanel",
  "BuildingRenderStateDriver",
  "BuildingSystem",
  "BuildingUI",
  "BuildingVisibilityDriver",
  "CAMERA_PANEL_DEFAULT_CLASSES",
  "CAMERA_PANEL_DEFAULT_LABELS",
  "CAMERA_PANEL_DEFAULT_TABS",
  "CAMERA_SETTINGS_DEFAULT_CLASSES",
  "CAMERA_SETTINGS_DEFAULT_LABELS",
  "CAMERA_SETTINGS_DEFAULT_SECTIONS",
  "CONTENT_SCHEMA_VERSION",
  "CameraPanel",
  "CameraSettingsTab",
  "CinematicPanel",
  "CommandPalette",
  "DEFAULT_BUILDING_GRID_EXTENSION_ID",
  "DEFAULT_BUILDING_OBJECT_CATALOG",
  "DEFAULT_BUILDING_PLACEMENT_EXTENSION_ID",
  "DEFAULT_BUILDING_SAVE_EXTENSION_ID",
  "DEFAULT_BUILDING_STORE_SERVICE_ID",
  "DEFAULT_EDITOR_SHORTCUTS",
  "DRAW_CLUSTER_BILLBOARD",
  "DRAW_CLUSTER_BLOCK",
  "DRAW_CLUSTER_COUNT",
  "DRAW_CLUSTER_DESCRIPTORS",
  "DRAW_CLUSTER_FIRE",
  "DRAW_CLUSTER_FLAG",
  "DRAW_CLUSTER_GRASS",
  "DRAW_CLUSTER_MODEL",
  "DRAW_CLUSTER_SAKURA",
  "DRAW_CLUSTER_SAND",
  "DRAW_CLUSTER_SNOWFIELD",
  "DRAW_CLUSTER_TILE",
  "DRAW_CLUSTER_WALL",
  "DRAW_CLUSTER_WATER",
  "EDITOR_PANEL_COMPONENT_KIND",
  "EMPTY_EDITOR_SELECTION",
  "Editor",
  "EditorLayout",
  "FLAG_STYLE_META",
  "Fire",
  "GPU_META_STRIDE",
  "GPU_SPATIAL_STRIDE",
  "GameplayEventPanel",
  "Grass",
  "GrassDriver",
  "GridHelper",
  "HierarchyPanel",
  "HttpContentBundleSource",
  "INDIRECT_DRAW_STRIDE",
  "InspectorPanel",
  "MOTION_PANEL_DEFAULT_CLASSES",
  "MOTION_PANEL_DEFAULT_LABELS",
  "MOTION_PANEL_DEFAULT_TABS",
  "MotionPanel",
  "PROJECT_ASSETS_PANEL_DEFAULT_CLASSES",
  "PROJECT_ASSETS_PANEL_DEFAULT_KIND_OPTIONS",
  "PROJECT_ASSETS_PANEL_DEFAULT_LABELS",
  "PROJECT_ASSETS_PANEL_DEFAULT_TABS",
  "PerformancePanel",
  "ProjectAssetsPanel",
  "ResizablePanel",
  "Sakura",
  "SakuraBatch",
  "Sand",
  "SandBatch",
  "SceneObjectTransformGizmo",
  "Snow",
  "Snowfield",
  "SnowfieldBatch",
  "StudioPanel",
  "TileSystem",
  "VehiclePanel",
  "WallSystem",
  "Water",
  "applyBuildingNavigationObstacles",
  "applySceneTransform",
  "blockToPlacementEntry",
  "buildBuildingGpuMirror",
  "buildBuildingIndirectDrawMirror",
  "buildingCellToWorld",
  "buildingGridAdapter",
  "buildingGroupsToPlacementEntries",
  "buildingPlacementAdapter",
  "buildingPlugin",
  "cellToTilePosition",
  "clearEditorSelection",
  "createBlockFootprint",
  "createBuildingGpuUploadPlan",
  "createBuildingIndirectDrawUploadPlan",
  "createBuildingPlacementEngine",
  "createBuildingPlugin",
  "createBuildingScopeId",
  "createContentBundleFromSaveSystem",
  "createCustomMeshId",
  "createEditorCommandStack",
  "createEditorPlayModeController",
  "createEditorSaveStatus",
  "createEditorSelectionState",
  "createEditorShell",
  "createEditorShortcutRegistry",
  "createEditorSlice",
  "createEditorTransaction",
  "createEmptyBuildingGpuUploadResources",
  "createEmptyBuildingIndirectDrawMirror",
  "createEmptyGpuMirror",
  "createSceneObjectEditorCommands",
  "createTerrainBlockMaterial",
  "createTileFootprint",
  "destroyBuildingGpuUploadResources",
  "edgeKey",
  "edgeSideToWallRotation",
  "edgeToWallTransform",
  "editorSlice",
  "findTerrainBlockMaterial",
  "formatEditorShortcut",
  "getActiveSceneObject",
  "getBlockSupportHeight",
  "getBuildingSupportHeight",
  "getDefaultBuildingObject",
  "getDrawClusterForSnapshotEntry",
  "getEditorSaveStatusLabel",
  "getGrassManager",
  "getIndirectInstanceCount",
  "getNextAutosaveAt",
  "getTileSupportHeight",
  "getWallMaterialKey",
  "getWebGPUDeviceFromRenderer",
  "hasTileCollision",
  "hasWallCollision",
  "indexAabb",
  "isEditableShortcutTarget",
  "isEditorPanelComponentExtension",
  "isSceneObjectSelected",
  "loadContentBundleFromManifest",
  "markEditorDirty",
  "markEditorSaveError",
  "markEditorSaved",
  "markEditorSaving",
  "matchesEditorShortcut",
  "normalizeQuarterTurnRotation",
  "object3DToSceneTransform",
  "pair",
  "parseBuildingGpuVisibilityFlags",
  "queryAabbIds",
  "resolveEditorPanelComponentExtensions",
  "selectSceneObject",
  "selectSceneObjectRange",
  "setSceneObjectHover",
  "shouldRunEditorAutosave",
  "snapBuildingPosition",
  "snapSceneTransform",
  "syncBuildingGpuBuffers",
  "syncBuildingIndirectArgsBuffer",
  "tileFootprintKeys",
  "tileGroupToPlacementEntries",
  "tileHalfSize",
  "tileOverlaps",
  "tilePositionToCell",
  "tileToPlacementEntry",
  "unindexId",
  "useBuildingEditor",
  "useBuildingGpuCullingStore",
  "useBuildingRenderStateStore",
  "useBuildingStore",
  "useBuildingVisibilityStore",
  "useEditor",
  "useEditorAutosave",
  "useEditorShortcuts",
  "useEditorStore",
  "validateContentBundle",
  "validateContentBundleManifest",
  "wallGroupToPlacementEntries",
  "wallToPlacementEntry",
  "wallTransformToEdge",
  "worldToBuildingCell",
  "zigZag",
]
`;

exports[`runtime export snapshot ./gameplay export 목록 1`] = `
[
  "GAMEPLAY_EVENT_ACTION_TYPES",
  "GAMEPLAY_EVENT_CONDITION_TYPES",
  "GAMEPLAY_EVENT_TRIGGER_TYPES",
  "GameplayEventEngine",
  "GameplayEventRegistry",
  "SEED_GAMEPLAY_EVENTS",
  "createClientGameplayEventServices",
  "createDefaultGameplayEventRegistry",
  "createGameplayEventActionTemplate",
  "createGameplayEventConditionTemplate",
  "createGameplayEventTriggerTemplate",
  "createManualToastEventBlueprint",
  "createNpcTalkStartsQuestEventBlueprint",
  "getGameplayEventRegistry",
  "installClientGameplayEventServices",
  "setDefaultGameplayEventServices",
]
`;

exports[`runtime export snapshot ./navigation export 목록 1`] = `
[
  "NavigationSystem",
  "applyNPCNavigationRoute",
  "applyRegisteredNavigationObstacles",
  "createNPCNavigationRoute",
  "getNavigationObstacles",
  "registerNavigationObstacles",
]
`;

exports[`runtime export snapshot ./network export 목록 1`] = `
[
  "ConnectionForm",
  "ConnectionPool",
  "DEFAULT_VISIT_DOMAINS",
  "MessageQueue",
  "MockNetworkAdapter",
  "MultiplayerCanvas",
  "NPCNetworkManager",
  "NPCNetworkVisualizer",
  "NetworkBridge",
  "NetworkDebugPanel",
  "NetworkSystem",
  "PlayerInfoOverlay",
  "PlayerNetworkManager",
  "PlayerPositionTracker",
  "RemotePlayer",
  "applyVisitSnapshot",
  "captureVisitRestorePoint",
  "createCommandAcceptedResult",
  "createCommandAuthorityRouter",
  "createCommandRejectedResult",
  "createGameCommand",
  "createLocalVisitChannel",
  "createNetworkEnvelope",
  "createServerEvent",
  "createSnapshotAck",
  "createStateDelta",
  "createWebSocketVisitChannel",
  "defaultMultiplayerConfig",
  "serializeVisit",
  "useMultiplayer",
  "useNPCConnection",
  "useNetworkBridge",
  "useNetworkConfigStore",
  "useNetworkConnection",
  "useNetworkGroup",
  "useNetworkGroups",
  "useNetworkMessage",
  "useNetworkNodes",
  "useNetworkStateStore",
  "useNetworkStats",
  "usePlayerNetwork",
  "useRecentMessages",
  "useVisitRoom",
  "visitProviderFromSaveSystem",
]
`;

exports[`runtime export snapshot ./next export 목록 1`] = `
[
  "FRUSTUM_PLANES_LENGTH",
  "MATRIX_STRIDE",
  "MAX_ENTITY_CAPACITY",
  "NextWorld",
  "RenderGraph",
  "TASK_PHASE_ORDER",
  "TaskGraph",
  "TransformStore",
  "compactVisible",
  "composeTrsMatrix",
  "createGpuCulledInstances",
  "createThreeWebGpuBackend",
  "cullSpheres",
  "entityGenerationOf",
  "entityIndexOf",
  "extractFrustumPlanes",
  "isWebGpuAvailable",
  "makeEntityId",
  "packInstanceMatrices",
]
`;

exports[`runtime export snapshot ./plugins export 목록 1`] = `
[
  "CircularPluginDependencyError",
  "DuplicateExtensionError",
  "DuplicatePluginError",
  "InMemoryEventBus",
  "InMemoryExtensionRegistry",
  "MissingExtensionError",
  "MissingPluginDependencyError",
  "PluginManifestValidationError",
  "PluginRegistry",
  "PluginValidationAssertionError",
  "PluginVersionMismatchError",
  "assertValidGaesupPlugin",
  "createCozyLifeSamplePlugin",
  "createHighGraphicsSamplePlugin",
  "createPluginContext",
  "createPluginLogger",
  "createPluginRegistry",
  "createShooterKitSamplePlugin",
  "createStoreDomainPlugin",
  "defineGaesupPlugin",
  "filterPluginsForRuntime",
  "shouldSetupPluginForRuntime",
  "validateGaesupPlugin",
]
`;

exports[`runtime export snapshot ./postprocessing export 목록 1`] = `
[
  "ColorGrade",
  "LutOverlay",
  "Outlined",
  "ToonOutlines",
  "createLutTexture",
  "loadCubeLut",
  "loadCubeLutTexture",
  "parseCubeLut",
]
`;

exports[`runtime export snapshot ./runtime export 목록 1`] = `
[
  "AFTER_MOTION_FRAME_ORDER",
  "ActiveObjects",
  "Airplane",
  "BugSpot",
  "Character",
  "DEFAULT_RUNTIME_SAVE_DIAGNOSTICS_SERVICE_ID",
  "DEFAULT_WORLD_SAVE_ENVIRONMENT",
  "DuplicateSaveDomainBindingError",
  "FRAME_PHASES",
  "FRAME_PRE_PHYSICS_PRIORITY",
  "FRAME_SCHEDULER_PRIORITY",
  "FishSpot",
  "FrameScheduler",
  "FrameSchedulerHost",
  "GaesupRuntimeProvider",
  "GaesupWorldContent",
  "IndexedDBAdapter",
  "LocalStorageAdapter",
  "PHYSICS_STEP_PRIORITY",
  "PassiveAirplane",
  "PassiveCharacter",
  "PassiveObjects",
  "PassiveVehicle",
  "RUNTIME_SAVE_BINDING_REJECTED_EVENT",
  "RUNTIME_SAVE_DIAGNOSTIC_EVENT",
  "Rideable",
  "RideableUI",
  "SaveLoadManager",
  "SaveSystem",
  "TreeObject",
  "Vehicle",
  "World",
  "WorldBridge",
  "WorldConfigProvider",
  "WorldContainer",
  "WorldProps",
  "WorldSystem",
  "createCameraSaveDataFromDomain",
  "createDefaultSaveSystem",
  "createFrameDriver",
  "createGaesupRuntime",
  "createPersistenceSlice",
  "createPersistenceSliceWithOptions",
  "createRuntimeSaveDiagnostics",
  "createSaveDataFromSaveSystem",
  "createWorldDataFromSaveDomains",
  "createWorldSlice",
  "formatRuntimeSaveDiagnostic",
  "frameScheduler",
  "getSaveSystem",
  "getSharedFrameEntryCount",
  "isAutoSaveSuspended",
  "normalizeSaveMetadata",
  "parseWorldSaveId",
  "parseWorldSaveTimestamp",
  "shouldSetupPluginForRuntime",
  "suspendAutoSave",
  "useAutoSave",
  "useCanvasFrameScheduler",
  "useEngineFrame",
  "useFrameDriverItem",
  "useGaesupRuntime",
  "useGaesupRuntimeRevision",
  "useLoadOnMount",
  "useSharedFrame",
]
`;

exports[`runtime export snapshot ./server-contracts export 목록 1`] = `
[
  "CONTENT_SCHEMA_VERSION",
  "DEFAULT_SERVER_COMMAND_AUTHORITY_SERVICE_ID",
  "GAMEPLAY_EVENT_ACTION_TYPES",
  "GAMEPLAY_EVENT_CONDITION_TYPES",
  "GAMEPLAY_EVENT_TRIGGER_TYPES",
  "GameplayEventEngine",
  "GameplayEventRegistry",
  "HttpContentBundleSource",
  "MockNetworkAdapter",
  "PLAYER_PROGRESS_DOMAINS",
  "ROLE_PERMISSIONS",
  "SEED_GAMEPLAY_EVENTS",
  "WORLD_SNAPSHOT_DOMAINS",
  "canMember",
  "collectSaveDomains",
  "createCommandAcceptedResult",
  "createCommandAuthorityRouter",
  "createCommandRejectedResult",
  "createContentBundleFromSaveSystem",
  "createDefaultGameplayEventRegistry",
  "createGameCommand",
  "createGameplayEventActionTemplate",
  "createGameplayEventConditionTemplate",
  "createGameplayEventTriggerTemplate",
  "createManualToastEventBlueprint",
  "createNetworkEnvelope",
  "createNpcTalkStartsQuestEventBlueprint",
  "createPlayerProgress",
  "createPlayerProgressFromSaveSystem",
  "createServerEvent",
  "createServerPluginHost",
  "createSnapshotAck",
  "createStateDelta",
  "createWorldSnapshot",
  "createWorldSnapshotFromSaveSystem",
  "getGameplayEventRegistry",
  "loadContentBundleFromManifest",
  "pickDomains",
  "resolveRolePermissions",
  "setDefaultGameplayEventServices",
  "validateContentBundle",
  "validateContentBundleManifest",
]
`;
